add blue-base-starter module